--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.15.0",
+    "jose": "^6.1.0",
     "jsbarcode": "^3.11.6",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
